zig/pkg/antfly/include/antfly.h

typedef enum antfly_error_code {
    ANTFLY_OK = 0,
    ANTFLY_INVALID_ARGUMENT = 1,
    ANTFLY_NOT_FOUND = 2,
    ANTFLY_VERSION_CONFLICT = 3,
    ANTFLY_INTENT_CONFLICT = 4,
    ANTFLY_TXN_NOT_FOUND = 5,
    ANTFLY_BUSY = 6,
    ANTFLY_OUTCOME_UNKNOWN = 7,
    ANTFLY_UNSUPPORTED = 8,
    ANTFLY_STALLED = 9,
    ANTFLY_CANCELLED = 10,
    ANTFLY_INTERNAL = 255,
} antfly_error_code;
typedef struct antfly_db antfly_db;
typedef enum antfly_txn_status {
    ANTFLY_TXN_PENDING = 0,
    ANTFLY_TXN_COMMITTED = 1,
    ANTFLY_TXN_ABORTED = 2,
} antfly_txn_status;
typedef struct antfly_slice {
    const uint8_t *ptr;
    size_t len;
} antfly_slice;
typedef struct antfly_buffer {
    uint8_t *ptr;
    size_t len;
} antfly_buffer;
#define ANTFLY_OPEN_MODE_WRITER 0u
#define ANTFLY_OPEN_MODE_READONLY 1u
#define ANTFLY_OPEN_MODE_STATUS_ONLY 2u
#define ANTFLY_STORAGE_KIND_DIRECTORY 0u
#define ANTFLY_STORAGE_KIND_LITE 1u
#define ANTFLY_PROFILE_NATIVE 0u
#define ANTFLY_PROFILE_HOSTED 1u
#define ANTFLY_OPEN_FLAG_NO_SYNC (1u << 0)
#define ANTFLY_OPEN_FLAG_TTL_CLEANUP (1u << 1)
#define ANTFLY_OPEN_FLAG_REMOTE_PROVIDER_CONFIGURED (1u << 2)
#define ANTFLY_OPEN_FLAG_LOCAL_RUNTIME_CONFIGURED (1u << 3)
#define ANTFLY_OPEN_FLAG_GENERATED_ENRICHMENT_REPLAY (1u << 4)
#define ANTFLY_INFERENCE_MODE_CALLER_SUPPLIED_OR_DISABLED "caller_supplied_or_disabled"
#define ANTFLY_INFERENCE_MODE_CALLER_SUPPLIED_ARTIFACTS "caller_supplied_artifacts"
#define ANTFLY_INFERENCE_MODE_REMOTE_PROVIDER "remote_provider"
#define ANTFLY_INFERENCE_MODE_LOCAL_EMBEDDED "local_embedded"
#define ANTFLY_INFERENCE_MODE_MANUAL_MAINTENANCE "manual_maintenance"
#define ANTFLY_INFERENCE_MODE_DISABLED_DEFERRED "disabled_deferred"
typedef struct antfly_open_options {
    uint32_t abi_size;
    uint32_t storage_kind;
    uint32_t open_mode;
    uint32_t profile;
    uint32_t flags;
    uint32_t reserved0;
    uint64_t map_size;
    bool ttl_cleanup_enabled;
    bool ttl_cleanup_lease_owned;
    uint32_t ttl_cleanup_batch_size;
    antfly_slice ttl_cleanup_owner_id;
    uint64_t ttl_cleanup_lease_ttl_ms;
    uint64_t ttl_cleanup_interval_ms;
    uint64_t ttl_cleanup_grace_period_ns;
    uint32_t inference_host_budget_mb;
    uint32_t inference_backend_budget_mb;
    uint32_t inference_process_memory_budget_mb;
    uint32_t inference_combined_budget_mb;
    uint32_t inference_kv_budget_mb;
    uint32_t inference_scratch_budget_mb;
    uint64_t busy_timeout_ms;
    uint64_t reserved[8];
} antfly_open_options;
typedef struct antfly_write_intent {
    antfly_slice key;
    antfly_slice value;
    bool is_delete;
} antfly_write_intent;
typedef struct antfly_version_predicate {
    antfly_slice key;
    uint64_t expected_version;
} antfly_version_predicate;
uint32_t antfly_open_options_size(void);
#define ANTFLY_THREADING_SERIALIZED 1u
#define ANTFLY_MIN_THREAD_STACK_SIZE (8u * 1024u * 1024u)
uint32_t antfly_threading_mode(void);
antfly_error_code antfly_db_open_with_options(
    const char *path,
    const antfly_open_options *options,
    antfly_db **out_db
);
antfly_error_code antfly_db_status_json(antfly_db *db, antfly_buffer *out);
antfly_error_code antfly_db_begin_transaction_with_id(
    antfly_db *db,
    const uint8_t (*txn_id)[16],
    uint64_t timestamp_ns,
    const antfly_slice *participants,
    size_t participant_count
);
antfly_error_code antfly_db_write_transaction(
    antfly_db *db,
    const uint8_t (*txn_id)[16],
    const antfly_write_intent *writes,
    size_t write_count,
    const antfly_version_predicate *predicates,
    size_t predicate_count
);
antfly_error_code antfly_db_resolve_intents(
    antfly_db *db,
    const uint8_t (*txn_id)[16],
    uint8_t status,
    uint64_t commit_version
);
antfly_error_code antfly_db_get_transaction_status(
    antfly_db *db,
    const uint8_t (*txn_id)[16],
    uint8_t *out_status
);
antfly_error_code antfly_db_get_commit_version(
    antfly_db *db,
    const uint8_t (*txn_id)[16],
    uint64_t *out_commit_version
);
#define ANTFLY_GRAPH_DIRECTION_OUT 0u
#define ANTFLY_GRAPH_DIRECTION_IN 1u
#define ANTFLY_GRAPH_DIRECTION_BOTH 2u
antfly_error_code antfly_db_get_edges_json(
    antfly_db *db,
    antfly_slice index_name,
    antfly_slice key,
    antfly_slice edge_type,
    uint8_t direction,
    antfly_buffer *out
);
antfly_error_code antfly_db_get_neighbors_json(
    antfly_db *db,
    antfly_slice index_name,
    antfly_slice key,
    antfly_slice edge_type,
    uint8_t direction,
    antfly_buffer *out
);
typedef struct antfly_inference antfly_inference;
typedef struct antfly_inference_options {
    uint32_t abi_size;
    uint32_t flags;
    antfly_slice models_dir;
    uint32_t host_budget_mb;
    uint32_t backend_budget_mb;
    uint32_t process_memory_budget_mb;
    uint32_t combined_budget_mb;
    uint32_t kv_budget_mb;
    uint32_t scratch_budget_mb;
    uint64_t call_timeout_ms;
    uint64_t reserved[8];
} antfly_inference_options;
uint32_t antfly_inference_options_size(void);
antfly_error_code antfly_inference_open(
    const antfly_inference_options *options,
    antfly_inference **out_inference
);
typedef bool (*antfly_inference_stream_fn)(void *context, antfly_slice chunk_json);
antfly_error_code antfly_inference_generate_stream_json(
    antfly_inference *inference,
    antfly_slice request_json,
    antfly_inference_stream_fn on_chunk,
    void *chunk_context,
    antfly_buffer *out
);
typedef struct antfly_inference_pull_progress {
    uint32_t abi_size;
    uint32_t reserved0;
    antfly_slice model;
    antfly_slice file;
    uint64_t bytes_downloaded;
    uint64_t total_bytes;
    uint64_t files_done;
    uint64_t files_total;
    bool cached;
} antfly_inference_pull_progress;
typedef bool (*antfly_inference_pull_progress_fn)(
    void *context,
    const antfly_inference_pull_progress *progress
);
antfly_error_code antfly_inference_pull_json(
    antfly_inference *inference,
    antfly_slice request_json,
    antfly_inference_pull_progress_fn progress,
    void *progress_context,
    antfly_buffer *out
);