rs/crates/lite-sys/src/lib.rs

// Copyright 2026 Antfly, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//! Raw, hand-written FFI declarations for `libantfly`, the embedded Antfly
//! C ABI.
//!
//! This mirrors `zig/pkg/antfly/include/antfly.h` field-for-field and
//! function-for-function. There is no `bindgen`/`libclang` dependency: the
//! header is small and stable enough that a hand-written mirror is easier to
//! audit and does not require a C toolchain to build this crate.
//!
//! Nothing in this crate is safe to call directly: every function takes raw
//! pointers and untyped handles exactly as the C ABI defines them. Use the
//! `antfly-lite` crate for a safe API.
//!
//! Linking against the actual `libantfly` dylib only happens when the
//! `libantfly` Cargo feature is enabled (see `build.rs`). Without it, this
//! crate compiles (and its types can be named) but must not be linked into
//! any binary that references these `extern "C"` items, or linking will
//! fail.
//!
//! Naming (mirrors the header's own convention): `antfly_*` functions are
//! library-level and take no database handle; `antfly_db_*` functions take
//! an `antfly_db` handle of any storage kind; `antfly_lite_*` functions
//! operate on the `.aflite` single-file format itself, plus shortcuts for
//! opening one.
#![allow(non_camel_case_types)]

use std::ffi::{c_char, c_void};

// ---------------------------------------------------------------------
// antfly_error_code
// ---------------------------------------------------------------------

/// A stable Antfly C ABI error code. Represented as `i32` to match a plain
/// C `enum`'s default underlying type on every target this crate supports.
pub type antfly_error_code = i32;

pub const ANTFLY_OK: antfly_error_code = 0;
pub const ANTFLY_INVALID_ARGUMENT: antfly_error_code = 1;
pub const ANTFLY_NOT_FOUND: antfly_error_code = 2;
pub const ANTFLY_VERSION_CONFLICT: antfly_error_code = 3;
pub const ANTFLY_INTENT_CONFLICT: antfly_error_code = 4;
pub const ANTFLY_TXN_NOT_FOUND: antfly_error_code = 5;
pub const ANTFLY_BUSY: antfly_error_code = 6;
pub const ANTFLY_OUTCOME_UNKNOWN: antfly_error_code = 7;
pub const ANTFLY_UNSUPPORTED: antfly_error_code = 8;
pub const ANTFLY_STALLED: antfly_error_code = 9;
/// The caller cancelled the call by returning `false` from its progress or
/// stream callback.
pub const ANTFLY_CANCELLED: antfly_error_code = 10;
pub const ANTFLY_INTERNAL: antfly_error_code = 255;

// ---------------------------------------------------------------------
// antfly_db (opaque handle)
// ---------------------------------------------------------------------

/// An open database. Opaque; see `antfly_db_open_with_options`. Every
/// handle-taking function in this crate takes `*mut antfly_db` /
/// `*mut *mut antfly_db`, matching the header's typed opaque pointer (ABI
/// version 2 replaced the untyped `void *` handle with this type).
#[repr(C)]
pub struct antfly_db {
    _private: [u8; 0],
}

// ---------------------------------------------------------------------
// antfly_inference (opaque handle) -- embedded inference without a database
// ---------------------------------------------------------------------

/// An open embedded inference runtime, with no database. Opaque; see
/// `antfly_inference_open`. Models load on first use and stay cached until
/// the handle closes. Handles have the same thread-safety guarantees as
/// `antfly_db` (see `zig/CAPI.md`'s "Thread Safety" section): any thread may
/// call concurrently, close waits for in-flight calls, and a closed or
/// foreign handle is rejected with `ANTFLY_INVALID_ARGUMENT`.
#[repr(C)]
pub struct antfly_inference {
    _private: [u8; 0],
}

/// Options for `antfly_inference_open`. `reserved`/`abi_size` layout must
/// mirror the header exactly -- `tests/abi_sizes.rs` checks
/// `size_of::<antfly_inference_options>()` against
/// `antfly_inference_options_size()`.
#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_inference_options {
    pub abi_size: u32,
    /// No flags are defined yet; must be zero.
    pub flags: u32,
    /// Models directory. Empty uses `$ANTFLY_INFERENCE_MODELS_DIR`, else
    /// `~/.antfly/inference/models`.
    pub models_dir: antfly_slice,
    /// Resource budgets in MiB, 0 meaning automatic; the same knobs as the
    /// `inference_*_budget_mb` fields of `antfly_open_options`.
    pub host_budget_mb: u32,
    pub backend_budget_mb: u32,
    pub process_memory_budget_mb: u32,
    pub combined_budget_mb: u32,
    pub kv_budget_mb: u32,
    pub scratch_budget_mb: u32,
    /// Deadline for each call in milliseconds; 0 means none.
    pub call_timeout_ms: u64,
    pub reserved: [u64; 8],
}

/// One report to an `antfly_inference_pull_json` progress callback. The
/// slices are valid only during the callback. Check `abi_size` before
/// reading fields added in later versions.
#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_inference_pull_progress {
    pub abi_size: u32,
    pub reserved0: u32,
    /// The model reference being pulled (one per requested variant).
    pub model: antfly_slice,
    pub file: antfly_slice,
    pub bytes_downloaded: u64,
    /// 0 when unknown.
    pub total_bytes: u64,
    pub files_done: u64,
    pub files_total: u64,
    /// The file was already present and verified; nothing was downloaded.
    pub cached: bool,
}

/// Progress callback for `antfly_inference_pull_json`. May be `None`
/// (a NULL function pointer). Called synchronously on the calling thread;
/// the `*const antfly_inference_pull_progress` it receives is only valid for
/// the duration of the call. Return `true` to continue, `false` to cancel
/// the pull (the call then returns `ANTFLY_CANCELLED`; completed files stay
/// staged, so a later pull of the same model resumes rather than restarts).
pub type antfly_inference_pull_progress_fn = Option<
    unsafe extern "C" fn(
        context: *mut c_void,
        progress: *const antfly_inference_pull_progress,
    ) -> bool,
>;

/// Streaming callback for `antfly_inference_generate_stream_json`. Receives
/// one streamed chunk -- the JSON of a `chat.completion.chunk` -- valid only
/// during the call, called on the calling thread as the model produces
/// tokens. Return `true` to continue, `false` to stop generating (the call
/// then returns `ANTFLY_CANCELLED`).
pub type antfly_inference_stream_fn =
    Option<unsafe extern "C" fn(context: *mut c_void, chunk_json: antfly_slice) -> bool>;

// ---------------------------------------------------------------------
// antfly_txn_status
// ---------------------------------------------------------------------

/// Transaction intent lifecycle state. Every C ABI function that carries a
/// transaction status uses a raw `uint8_t`, not this enum type, so this
/// alias exists only for documentation/parity with the header.
pub type antfly_txn_status = u8;

pub const ANTFLY_TXN_PENDING: antfly_txn_status = 0;
pub const ANTFLY_TXN_COMMITTED: antfly_txn_status = 1;
pub const ANTFLY_TXN_ABORTED: antfly_txn_status = 2;

// ---------------------------------------------------------------------
// Open mode / profile / storage kind / flag constants
// ---------------------------------------------------------------------

pub const ANTFLY_OPEN_MODE_WRITER: u32 = 0;
pub const ANTFLY_OPEN_MODE_READONLY: u32 = 1;
pub const ANTFLY_OPEN_MODE_STATUS_ONLY: u32 = 2;

pub const ANTFLY_STORAGE_KIND_DIRECTORY: u32 = 0;
pub const ANTFLY_STORAGE_KIND_LITE: u32 = 1;

pub const ANTFLY_PROFILE_NATIVE: u32 = 0;
pub const ANTFLY_PROFILE_HOSTED: u32 = 1;

pub const ANTFLY_OPEN_FLAG_NO_SYNC: u32 = 1 << 0;
pub const ANTFLY_OPEN_FLAG_TTL_CLEANUP: u32 = 1 << 1;
pub const ANTFLY_OPEN_FLAG_REMOTE_PROVIDER_CONFIGURED: u32 = 1 << 2;
pub const ANTFLY_OPEN_FLAG_LOCAL_RUNTIME_CONFIGURED: u32 = 1 << 3;
pub const ANTFLY_OPEN_FLAG_GENERATED_ENRICHMENT_REPLAY: u32 = 1 << 4;

/// `inference.mode` values reported by `antfly_db_status_json`.
pub const ANTFLY_INFERENCE_MODE_CALLER_SUPPLIED_OR_DISABLED: &str = "caller_supplied_or_disabled";
pub const ANTFLY_INFERENCE_MODE_CALLER_SUPPLIED_ARTIFACTS: &str = "caller_supplied_artifacts";
pub const ANTFLY_INFERENCE_MODE_REMOTE_PROVIDER: &str = "remote_provider";
pub const ANTFLY_INFERENCE_MODE_LOCAL_EMBEDDED: &str = "local_embedded";
pub const ANTFLY_INFERENCE_MODE_MANUAL_MAINTENANCE: &str = "manual_maintenance";
pub const ANTFLY_INFERENCE_MODE_DISABLED_DEFERRED: &str = "disabled_deferred";

/// Threading contract, like `sqlite3_threadsafe()`. See `antfly_threading_mode`.
pub const ANTFLY_THREADING_SERIALIZED: u32 = 1;

/// Minimum native stack, in bytes, for any thread that calls into libantfly.
/// See `ANTFLY_MIN_THREAD_STACK_SIZE` in antfly.h.
pub const ANTFLY_MIN_THREAD_STACK_SIZE: usize = 8 * 1024 * 1024;

/// `direction` values for `antfly_db_get_edges_json` and
/// `antfly_db_get_neighbors_json`.
pub const ANTFLY_GRAPH_DIRECTION_OUT: u8 = 0;
pub const ANTFLY_GRAPH_DIRECTION_IN: u8 = 1;
pub const ANTFLY_GRAPH_DIRECTION_BOTH: u8 = 2;

// ---------------------------------------------------------------------
// Plain-old-data structs (repr(C), field order matches antfly.h exactly)
// ---------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_slice {
    pub ptr: *const u8,
    pub len: usize,
}

impl Default for antfly_slice {
    fn default() -> Self {
        antfly_slice {
            ptr: std::ptr::null(),
            len: 0,
        }
    }
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_buffer {
    pub ptr: *mut u8,
    pub len: usize,
}

impl Default for antfly_buffer {
    fn default() -> Self {
        antfly_buffer {
            ptr: std::ptr::null_mut(),
            len: 0,
        }
    }
}

/// One options struct for every storage kind. `storage_kind` (an
/// `ANTFLY_STORAGE_KIND_*` value) picks a `.aflite` file or a normal
/// directory; the inference budget fields, `busy_timeout_ms`, and
/// `reserved[8]` layout must mirror the header exactly -- `tests/abi_sizes.rs`
/// checks `size_of::<antfly_open_options>()` against
/// `antfly_open_options_size()`.
#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_open_options {
    pub abi_size: u32,
    pub storage_kind: u32,
    pub open_mode: u32,
    pub profile: u32,
    pub flags: u32,
    pub reserved0: u32,
    pub map_size: u64,
    pub ttl_cleanup_enabled: bool,
    pub ttl_cleanup_lease_owned: bool,
    pub ttl_cleanup_batch_size: u32,
    pub ttl_cleanup_owner_id: antfly_slice,
    pub ttl_cleanup_lease_ttl_ms: u64,
    pub ttl_cleanup_interval_ms: u64,
    pub ttl_cleanup_grace_period_ns: u64,
    /// Explicit embedded-inference resource-budget overrides in MiB, 0
    /// meaning automatic/host-detected sizing. Only consulted when `flags`
    /// carries `ANTFLY_OPEN_FLAG_LOCAL_RUNTIME_CONFIGURED`.
    pub inference_host_budget_mb: u32,
    pub inference_backend_budget_mb: u32,
    pub inference_process_memory_budget_mb: u32,
    pub inference_combined_budget_mb: u32,
    pub inference_kv_budget_mb: u32,
    pub inference_scratch_budget_mb: u32,
    /// Milliseconds to keep retrying while another writer holds the writer
    /// lock (`ANTFLY_BUSY`), like `sqlite3_busy_timeout`. 0 fails immediately.
    pub busy_timeout_ms: u64,
    pub reserved: [u64; 8],
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_write_intent {
    pub key: antfly_slice,
    pub value: antfly_slice,
    pub is_delete: bool,
}
